done till evluation

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -8,7 +8,7 @@
     "#### Hosted by Bar Ilan University (BIU)\n",
     "prior knowlage: \n",
     "- Minor understanding of signal proccesing \n",
-    "- Python"
+    "- Python\n"
    ]
   },
   {
@@ -106,7 +106,7 @@
     "print(samples[20:])\n",
     "print(f'samplerate={sr}')\n",
     "\n",
-    "# TODO: implement thw following functions\n",
+    "# TODO: implement the following functions\n",
     "# hint when mixing two audio signals you add both signals and then normelize, make sure both signals has same length before summation!\n",
     " \n",
     "def norm(samples):\n",
@@ -120,9 +120,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### The variable wav represent the audio samples and the variable sr represents the sampling rate of the audio. \n",
-    "##### The sampling rate corresponds to the number of samples this file has in one second.\n",
-    "##### The sampling rate is important for proccesing and playback as well, playing the same file with a wrong sampling rate will result in destortion of the original audio.\n"
+    "The variable **wav** represent the audio samples and the variable **sr** represents the sampling rate of the audio.\n",
+    "\n",
+    "The sampling rate corresponds to the number of samples this file has in one second.\n",
+    "\n",
+    "The sampling rate is important for proccesing and playback as well, playing the same file with a wrong sampling rate will result in destortion of the original audio.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <span style=\"color:red\"> For the next parts audio will be played on your PC, please keep the volume down or use headphones </span>"
    ]
   },
   {
@@ -275,8 +284,38 @@
    "metadata": {},
    "source": [
     "# 4. Extraction model\n",
-    "- Guide participants through the process of extracting voices from their recorded speech\n",
-    "samples using the provided model. "
+    "The model arcitecture:\n",
+    "\n",
+    "<img src=\"media/extraction_model.png\" width=\"700\">\n",
+    "\n",
+    "Our model works with audio sampled at 8000 Hz, it will automaticly resample the audio will also return the extraacted audio in 8000 Hz.\n",
+    "When playing the extracted audio make sure to set SR=8000 !\n",
+    "\n",
+    "TDL:\n",
+    "- [] load two audio files with **torchaudio** (HINT 1), one to be extracted and another one as interference (could be another workshop memeber or one from samples folder)\n",
+    "- [] Mix two files (make sure to have two diffrent speakers)\n",
+    "- [] Load a refrence file tith torchaudio as well\n",
+    "- [] Start a speaker extration class instance (HINT 2)\n",
+    "- [] Use the extract_vec method to extract your voice.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Because working with pytorch we can load the audio with torchaudio directly to a torch.Tensor\n",
+    "import torchaudio\n",
+    "#HINT 1\n",
+    "#samples_mix, sr = torchaudio.load(path_to_wav)\n",
+    "\n",
+    "#HINT 2\n",
+    "# from speaker_extraction.extraction_model.deliver import Extractor\n",
+    "# extractor = Extractor()\n",
+    "\n",
+    "\n",
+    "####### YOUR CODE HERE #######\n"
    ]
   },
   {
@@ -284,9 +323,17 @@
    "metadata": {},
    "source": [
     "## 5. Evaluation and Discussion (10 minutes)\n",
-    "- Encourage participants to evaluate the eﬀectiveness of their voice extraction.(sisdr ,asr if possible)\n",
-    "- maybe ask for a volenteer to present his good/bad extraction.\n",
-    "- Discuss potential applications of voice extraction in HRI research."
+    "\n",
+    "Plot the spectogram of the mixed signal and then the extracted signal, Do you see any diffrence?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#TODO: SISDR, ASR WITH GOOGLE ON COLAB?\n"
    ]
   },
   {
@@ -294,6 +341,8 @@
    "metadata": {},
    "source": [
     "## 6. Conclusion (10 minutes)\n",
+    "## Anyone is keen to share his/hers results?\n",
+    "\n",
     "- Summarize key takeaways from the workshop, emphasizing their relevance to the SPRING\n",
     "project and its goals.\n",
     "- Provide additional resources for further learning. (papers, sharon's website)"
