--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -45,6 +45,106 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "15892.36s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Looking in indexes: https://pypi.org/simple, https://pypi.ngc.nvidia.com\n",
+      "Requirement already satisfied: pip in /home/bari/.local/lib/python3.10/site-packages (22.3.1)\n",
+      "Collecting install\n",
+      "  Downloading install-1.3.5-py3-none-any.whl (3.2 kB)\n",
+      "Requirement already satisfied: deepgram-sdk<4.0,>=3.* in /home/bari/.local/lib/python3.10/site-packages (3.1.3)\n",
+      "Requirement already satisfied: dataclasses-json>=0.6.3 in /home/bari/.local/lib/python3.10/site-packages (from deepgram-sdk<4.0,>=3.*) (0.6.4)\n",
+      "Requirement already satisfied: verboselogs>=1.7 in /home/bari/.local/lib/python3.10/site-packages (from deepgram-sdk<4.0,>=3.*) (1.7)\n",
+      "Requirement already satisfied: aiohttp>=3.9.1 in /home/bari/.local/lib/python3.10/site-packages (from deepgram-sdk<4.0,>=3.*) (3.9.3)\n",
+      "Requirement already satisfied: typing-extensions>=4.9.0 in /home/bari/.local/lib/python3.10/site-packages (from deepgram-sdk<4.0,>=3.*) (4.9.0)\n",
+      "Requirement already satisfied: httpx>=0.25.2 in /home/bari/.local/lib/python3.10/site-packages (from deepgram-sdk<4.0,>=3.*) (0.26.0)\n",
+      "Requirement already satisfied: websockets>=12.0 in /home/bari/.local/lib/python3.10/site-packages (from deepgram-sdk<4.0,>=3.*) (12.0)\n",
+      "Requirement already satisfied: frozenlist>=1.1.1 in /home/bari/.local/lib/python3.10/site-packages (from aiohttp>=3.9.1->deepgram-sdk<4.0,>=3.*) (1.3.1)\n",
+      "Requirement already satisfied: async-timeout<5.0,>=4.0 in /home/bari/.local/lib/python3.10/site-packages (from aiohttp>=3.9.1->deepgram-sdk<4.0,>=3.*) (4.0.2)\n",
+      "Requirement already satisfied: multidict<7.0,>=4.5 in /home/bari/.local/lib/python3.10/site-packages (from aiohttp>=3.9.1->deepgram-sdk<4.0,>=3.*) (6.0.2)\n",
+      "Requirement already satisfied: yarl<2.0,>=1.0 in /home/bari/.local/lib/python3.10/site-packages (from aiohttp>=3.9.1->deepgram-sdk<4.0,>=3.*) (1.8.1)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in /home/bari/.local/lib/python3.10/site-packages (from aiohttp>=3.9.1->deepgram-sdk<4.0,>=3.*) (22.1.0)\n",
+      "Requirement already satisfied: aiosignal>=1.1.2 in /home/bari/.local/lib/python3.10/site-packages (from aiohttp>=3.9.1->deepgram-sdk<4.0,>=3.*) (1.2.0)\n",
+      "Requirement already satisfied: marshmallow<4.0.0,>=3.18.0 in /home/bari/.local/lib/python3.10/site-packages (from dataclasses-json>=0.6.3->deepgram-sdk<4.0,>=3.*) (3.19.0)\n",
+      "Requirement already satisfied: typing-inspect<1,>=0.4.0 in /home/bari/.local/lib/python3.10/site-packages (from dataclasses-json>=0.6.3->deepgram-sdk<4.0,>=3.*) (0.9.0)\n",
+      "Requirement already satisfied: httpcore==1.* in /home/bari/.local/lib/python3.10/site-packages (from httpx>=0.25.2->deepgram-sdk<4.0,>=3.*) (1.0.2)\n",
+      "Requirement already satisfied: sniffio in /home/bari/.local/lib/python3.10/site-packages (from httpx>=0.25.2->deepgram-sdk<4.0,>=3.*) (1.3.0)\n",
+      "Requirement already satisfied: anyio in /home/bari/.local/lib/python3.10/site-packages (from httpx>=0.25.2->deepgram-sdk<4.0,>=3.*) (3.6.2)\n",
+      "Requirement already satisfied: certifi in /usr/lib/python3/dist-packages (from httpx>=0.25.2->deepgram-sdk<4.0,>=3.*) (2020.6.20)\n",
+      "Requirement already satisfied: idna in /usr/lib/python3/dist-packages (from httpx>=0.25.2->deepgram-sdk<4.0,>=3.*) (3.3)\n",
+      "Requirement already satisfied: h11<0.15,>=0.13 in /home/bari/.local/lib/python3.10/site-packages (from httpcore==1.*->httpx>=0.25.2->deepgram-sdk<4.0,>=3.*) (0.14.0)\n",
+      "Requirement already satisfied: packaging>=17.0 in /home/bari/.local/lib/python3.10/site-packages (from marshmallow<4.0.0,>=3.18.0->dataclasses-json>=0.6.3->deepgram-sdk<4.0,>=3.*) (21.3)\n",
+      "Requirement already satisfied: mypy-extensions>=0.3.0 in /home/bari/.local/lib/python3.10/site-packages (from typing-inspect<1,>=0.4.0->dataclasses-json>=0.6.3->deepgram-sdk<4.0,>=3.*) (1.0.0)\n",
+      "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/lib/python3/dist-packages (from packaging>=17.0->marshmallow<4.0.0,>=3.18.0->dataclasses-json>=0.6.3->deepgram-sdk<4.0,>=3.*) (2.4.7)\n",
+      "Installing collected packages: install\n",
+      "Successfully installed install-1.3.5\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip3 install requests ffmpeg-python\n",
+    "! pip3 install pip install \"deepgram-sdk>=3.*,<4.0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The female produces a letter 2 to 4 young in November and Ashland is\n",
+      "The female produces a litter of 2 to 4 young in November December.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ASR\n",
+    "from deepgram import DeepgramClient, PrerecordedOptions\n",
+    "# go here and get an API key https://console.deepgram.com/signup\n",
+    "# The API key we created in step 3\n",
+    "DEEPGRAM_API_KEY = 'your key'\n",
+    "\n",
+    "# Hosted sample file\n",
+    "file_path_out = '/home/bari/workspace/spring_winter_school/speaker_extraction_workshop/outputs/y_ckpt.wav'\n",
+    "file_mix='/home/bari/workspace/spring_winter_school/speaker_extraction_workshop/speaker_extraction/outputs/mono_s1/mix.wav'\n",
+    "deepgram = DeepgramClient(DEEPGRAM_API_KEY)\n",
+    "\n",
+    "def transctibe_wav(wav_path):\n",
+    "    with open(wav_path, 'rb') as buffer_data:\n",
+    "        payload = { 'buffer': buffer_data }\n",
+    "\n",
+    "        options = PrerecordedOptions(\n",
+    "            smart_format=True, model=\"nova-2\", language=\"en-US\"\n",
+    "        )\n",
+    "        response = deepgram.listen.prerecorded.v('1').transcribe_file(payload, options)\n",
+    "        trns = response.results.channels[0].alternatives[0].transcript\n",
+    "        return trns\n",
+    "\n",
+    "\n",
+    "print(transctibe_wav(file_mix))\n",
+    "print(transctibe_wav(file_path_out))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -193,7 +293,7 @@
    "metadata": {},
    "source": [
     "## 3. Hands-on Session #1 : Signals and Spectograms (15 minutes)\n",
-    "## 3.a. Recording Speech Samples\n",
+    "### 3.a. Recording Speech Samples\n",
     "record your self saying the folowing phrase:\n",
     "- Hello from Grenoble! Today I learnd about audio prossecing and speech extraction, Let's see if my voice could be extracted.\n",
     "\n",
@@ -218,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.b. Hands-on Session: STFT domain\n",
+    "### 3.b. Hands-on Session: STFT domain\n",
     "\n",
     "Now that you are familiar with digital audio, lets talk about spectograms.\n",
     "\n",
@@ -301,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,11 +447,6 @@
     "project and its goals.\n",
     "- Provide additional resources for further learning. (papers, sharon's website)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
