done till sisdr, need to check sisdri

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -117,7 +117,7 @@
    "metadata": {},
    "source": [
     "## Introduction to the process of recording speech samples on laptops:\n",
-    "\n",
+    "#### The audio samples in this section is from the Librispeech dataset from OpenSLR: https://www.openslr.org/11/\n",
     "Audio is represented as a list of samples that correspond to the sound and time axis. \n",
     "Normalizing audio signal can be done in several ways, we will normalize in this method: \n",
     "$$\n",
@@ -145,7 +145,7 @@
     "import torch\n",
     "import numpy as np\n",
     "\n",
-    "samples,sr = sf.read('speaker_extraction/outputs/mono_s1/ref1.wav')\n",
+    "samples,sr = sf.read('audio_samples/males/28233/5105-28233-0006.wav')\n",
     "print(samples[20:])\n",
     "print(f'samplerate={sr}')\n",
     "\n",
@@ -178,9 +178,7 @@
     "\n",
     "# ref1_vec,sr1 =sf.read(ref1) \n",
     "# ref2_vec,sr2 =sf.read(ref2) \n",
-    "# m = mix(ref1_vec,ref2_vec)\n",
-    "\n",
-    "#add sir\n"
+    "# m = mix(ref1_vec,ref2_vec)"
    ]
   },
   {
@@ -494,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -565,14 +563,15 @@
     "    mixed = mix(wav1,wav2)\n",
     "    wav1_res = F.resample(wav1,sr_wav1,8000)\n",
     "    wav2_res = F.resample(wav2,sr_wav2,8000)\n",
-    "    return mixed,ref1,ref2,wav1_res,wav2_res\n",
+    "    mixed_res = F.resample(mixed,input_sr,8000)\n",
+    "    return mixed,mixed_res,ref1,ref2,wav1_res,wav2_res\n",
     "\n",
     "wav1_path='audio_samples/males/28233/5105-28233-0006.wav'\n",
     "wav2_path='audio_samples/females/29095/4970-29095-0034.wav'\n",
     "ref1_path='audio_samples/males/28233/5105-28233-0008.wav'\n",
     "ref2_path='audio_samples/females/29095/4970-29095-0038.wav'\n",
     "input_sr=16000\n",
-    "mixed,ref1,ref2,y_1,y_2 = prepare_batch(wav1_path,wav2_path,ref1_path,ref2_path,input_sr)\n",
+    "mixed,mixed_resampled,ref1,ref2,y_1,y_2 = prepare_batch(wav1_path,wav2_path,ref1_path,ref2_path,input_sr)\n",
     "sf.write('mixed_f1_m1.wav',mixed,sr)\n",
     "print(transcribe_wav('mixed_f1_m1.wav'))\n",
     "display_audio(mixed,sr)\n",
@@ -584,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -600,20 +599,19 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/plain": [
-       "tensor(5.7068)"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(4.4350)\n"
+     ]
     }
    ],
    "source": [
     "y_1.shape\n",
     "plot_spectrogram(y_hat[:y_1.shape[-1]],8000)\n",
-    "si_sdr(y_hat[:y_1.shape[-1]],y_1.squeeze())"
+    "input_sisdr =si_sdr(y_1.squeeze(),mixed_resampled[:y_1.shape[-1]])\n",
+    "si= si_sdr(y_hat[:y_1.shape[-1]],y_1.squeeze())\n",
+    "print(si - input_sisdr)\n"
    ]
   },
   {
